--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,22 @@
 }
 
 @import "./styles/header.scss";
+
+// General Element Styles
+
+body {
+  font-family: "Lato", sans-serif;
+}
+
+h1,
+h2,
+h3 {
+  font-size: 3rem;
+  font-family: "Amatic SC", sans-serif;
+  font-weight: 700;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
