--- a/src/styles.scss
+++ b/src/styles.scss
@@ -119,5 +119,5 @@ p {
 
 // Layouts
 
-@import "./styles/header.scss";
-@import "./styles/social.scss";
+@import "./styles/layout/header.scss";
+@import "./styles/layout/social.scss";
