Implement mobile description section

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,7 +33,9 @@ img {
 }
 
 p {
-  margin: 0 0.5rem;
+  margin: 0 0.5rem 0.5rem;
+  max-width: 70ch;
+  line-height: 1.5;
 }
 
 // Custom Elements
@@ -121,3 +123,4 @@ p {
 
 @import "./styles/layout/header.scss";
 @import "./styles/layout/social.scss";
+@import "./styles/layout/description.scss";
