Implement mobile newsletter signup

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -124,3 +124,4 @@ p {
 @import "./styles/layout/header.scss";
 @import "./styles/layout/social.scss";
 @import "./styles/layout/description.scss";
+@import "./styles/layout/newsletter.scss";
