Style footer element

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,3 +125,4 @@ p {
 @import "./styles/layout/social.scss";
 @import "./styles/layout/description.scss";
 @import "./styles/layout/newsletter.scss";
+@import "./styles/layout/footer.scss";
