--- a/src/styles/layout/header.scss
+++ b/src/styles/layout/header.scss
@@ -33,6 +33,9 @@ header {
 .header-img {
   max-width: 600px;
   margin: 0 auto;
+
+  perspective: 2000px;
+  perspective-origin: center;
 }
 
 .header-img img {
@@ -40,6 +43,6 @@ header {
   max-width: 75%;
   margin: 0 auto;
   height: auto;
-
+  
   filter: drop-shadow(0px 64px 32px rgba(0, 0, 0, 0.3));
 }
